<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/content_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="62sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="45sp"
                android:layout_height="42sp"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                android:src="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textSize="15sp"
                tools:ignore="NestedWeights" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/my_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="45sp"
                android:layout_height="42sp"
                android:scaleType="centerInside"
                android:src="@drawable/mapatient"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/my_patient"
                android:textSize="15dp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/knowledge_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="42dp"
                android:scaleType="centerInside"
                android:src="@drawable/knowledge"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/knowledge_center"
                android:textSize="15dp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="42dp"
                android:scaleType="centerInside"
                android:src=""
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>